// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a medium inverse loader panel correctly 1`] = `
<div
  className="src-shared-components-loader-panel__container"
>
  <Loader
    size="medium"
    type="inverse"
  />
</div>
`;

exports[`should render a tiny default loader panel correctly 1`] = `
<div
  className="src-shared-components-loader-panel__container"
>
  <Loader
    size="tiny"
    type="default"
  />
</div>
`;
